--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
+numpy==1.18.5
+pandas==1.1.4
+SpeechRecognition==3.8.1
+wordcloud==1.8.0
 matplotlib==3.3.1
-numpy==1.19.1
-spacy==2.3.2
-pandas==1.1.1
-pydub==0.24.1
 streamlit==0.71.0
-wordcloud==1.8.1
+spacy==2.3.2
