--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-numpy==1.18.5
-pandas==1.1.4
 SpeechRecognition==3.8.1
-wordcloud==1.8.0
-matplotlib==3.3.1
+pydub==0.24.1
 streamlit==0.71.0
+pandas==1.1.4
 spacy==2.3.2
+matplotlib==3.3.1
+wordcloud==1.8.0
+https://github.com/explosion/spacy-models/releases/download/pl_core_news_sm-2.3.0/pl_core_news_sm-2.3.0.tar.gz#egg=pl_core_news_sm==2.3.0
